--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -145,10 +145,11 @@ body{
         flex-direction: row;
         justify-content: space-between;
         flex-wrap: wrap;
-        margin-top: 66px;
+        padding-top: 66px;
+        padding-bottom: 60px;
         margin-left: auto;
         margin-right: auto;
-        margin-bottom: 60px;
+        
        
     }
         .section-promo-content{
@@ -421,7 +422,7 @@ body{
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 80px;
+        padding-top: 80px;
     }
         .section-inner-services-wrapper{
            text-align: center; 
@@ -717,7 +718,7 @@ body{
 
 /* team */
 .section-team{
-    margin-top: 80px;
+    padding-top: 80px;
     margin-left: auto;
     margin-right: auto;
 }
